--- a/sleuth-customerservice/src/main/resources/application.properties
+++ b/sleuth-customerservice/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name="CustomerService"
 #logging.level.org.springframework.cloud.sleuth=DEBUG
 
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+spring.zipkin.base-url=http://localhost:8085
+spring.sleuth.sampler.probability=1.0
