--- a/sleuth-dataservice1/src/main/resources/application.properties
+++ b/sleuth-dataservice1/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.application.name="ContactDetailsService"
 #logging.level.org.springframework.*=debug
 #logging.level.org.springframework.cloud.*=debug
 logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+
+spring.zipkin.base-url=http://localhost:8085
+spring.sleuth.sampler.probability=1.0
